--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,4 @@
-version: 2 
-jobs:
+version: 2 jobs:
 one:
 docker:
 -	image: cimg/ruby:2.6.8 auth:
@@ -19,4 +18,3 @@ password: $DOCKERHUB_PASSWORD steps:
 workflows: version: 2 one_and_two: jobs:
 -one
 -two
-
